--- a/profiler/conf/biochemical_network/biochemical_config.yml
+++ b/profiler/conf/biochemical_network/biochemical_config.yml
@@ -8,6 +8,7 @@ repeatsPerQuery: 5
 
 queries: "queries.yml"
 deleteInsertedConcepts: true
+traceDeleteInsertedConcepts: false
 
 concurrency:
   clients: 1
