--- a/profiler/conf/biochemical_network/biochemical_config_write.yml
+++ b/profiler/conf/biochemical_network/biochemical_config_write.yml
@@ -1,14 +1,12 @@
-graphName: "road_network"
-schema: "road_network.gql"
+graphName: "biochemical_network"
+schema: "biochemical_network.gql"
 scales:
-- 400
-- 1000
-- 2000
-#  - 14000
-
+  - 500
+  - 1000
+  - 2000
 repeatsPerQuery: 5
 
-queries: "queries.yml"
+queries: "queries_write.yml"
 deleteInsertedConcepts: true
 traceDeleteInsertedConcepts: false
 
