--- a/profiler/conf/biochemical_network/biochemical_config_read.yml
+++ b/profiler/conf/biochemical_network/biochemical_config_read.yml
@@ -1,4 +1,6 @@
-graphName: "biochemical_network"
+name: "Biochemical Network - Read"
+description: "Benchmark simple biochem network with: Increasing C_in, Increasing R_out, and Constant A_out"
+dataGenerator: "biochemical_network"
 schema: "biochemical_network.gql"
 scales:
   - 500
