--- a/common/configuration/scenario/biochemical_network/biochemical_config_read.yml
+++ b/common/configuration/scenario/biochemical_network/biochemical_config_read.yml
@@ -3,9 +3,9 @@ description: "Benchmark simple biochemical network with: Increasing C_in, Increa
 dataGenerator: "biochemical_network"
 schema: "biochemical_network.gql"
 scales:
-  - 2000
-  - 4000
-  - 6000 # large number of role players => slow at large scales
+  - 300
+#  - 4000
+#  - 6000 # large number of role players => slow at large scales
 repeatsPerQuery: 5
 
 queries: "queries_read.yml"
